--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /FactoryFrenzy/FactoryFrenzy/Library/
 /FactoryFrenzy/FactoryFrenzy/Logs/
 /FactoryFrenzy/FactoryFrenzy/obj/Debug/
+/FactoryFrenzy/FactoryFrenzy/obj/ProjectSettings/
 /FactoryFrenzy/FactoryFrenzy/ProjectSettings/Packages/com.unity.testtools.codecoverage/
 
 # MemoryCaptures can get excessive in size.
