--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /FactoryFrenzy/FactoryFrenzy/Logs/
 /FactoryFrenzy/FactoryFrenzy/obj/Debug/
 /FactoryFrenzy/FactoryFrenzy/ProjectSettings/Packages/com.unity.testtools.codecoverage/
+/FactoryFrenzy/FactoryFrenzy/obj/ProjectSettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
